@@ -1,6 +1,7 @@
-# NickQuinnYunusIsaac
+Installation and Use Guide:
 
-In order to install this iteration of our Monopoly game you must first download the MAIN branch as a zip from github directly (green button with <code> on it. Then you will need to 
-extract the contents into a directory you are comfrotable sharing with eclipse. Next, go into eclipse and click on the file dropdown
-there you will find the option, "Open projects from file system" then locate your directory and open it in your eclipse program. Finally,
-make sure you have your java libraries on and automatic build toggled on. 
+Install JavaFX 
+Add javaFX external jars to module path
+In run configurations/VM Arguments: --module-path "path-to-javaFX-external-jars" --add-modules javafx.controls,javafx.graphics,javafx.fxml
+
+Please play in maximized window. 
